# go-gptcomet-publish-test

./: .bumpversion.cfg  CHANGELOG.md  Justfile  README.md  go.mod  go.sum  install.ps1  install.sh  main.go  pyproject.toml
.github/workflows/: release.yml
artwork/: commit.tape  newprovider.tape
cmd/: commit.go  commit_test.go  config.go  provider.go
internal/client/: client.go
internal/config/: config.go
internal/git/: git.go  git_test.go  svn.go  vcs.go
internal/llm/: azure.go  azure_test.go  chatglm.go  chatglm_test.go  claude.go  claude_test.go  cohere.go  deepseek.go  gemini.go  kimi.go  kimi_test.go  llm.go  mistral.go  ollama.go  ollama_test.go  openai.go  openai_test.go  provider.go  sambanova.go  sambanova_test.go  silicon.go  tongyi.go  tongyi_test.go  vertex.go  xai.go  xai_test.go
internal/provider/: provider.go
internal/testutils/: testutils.go
internal/ui/: provider.go
pkg/config/: config.go  types.go
pkg/config/defaults/: defaults.go
pkg/config/validator/: validator.go
pkg/errors/: errors.go
pkg/types/: types.go
py/gptcomet/: __init__.py
