[project]
name = "gptcomet"
version = "0.1.22"
description = "GPTComet: AI-Powered Git Commit Message Generator."
authors = [{ name = "belingud", email = "im.victor@qq.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "ai",
    "git",
    "commit",
    "message",
    "ai-powered",
    "commit-message",
    "gptcomet",
    "chatgpt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/belingud/gptcomet"
Repository = "https://github.com/belingud/gptcomet"
Documentation = "https://github.com/belingud/gptcomet"

[project.scripts]
gmsg = "gptcomet:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "py"
excludes = ["**/tests", ".gitkeep"]
is-purelib = false
platforms = [
    "linux_x86_64",
    "linux_aarch64",
    "win_amd64",
    "win_arm64",
    "macos_x86_64",
    "macos_arm64",
]
source-includes = ["LICENSE", "README.md", "pyproject.toml"]

[tool.pdm.build.wheel-data]
plat-name = {win32 = "win_amd64", linux_x86_64 = "manylinux2014_x86_64", darwin_x86_64 = "macosx_10_9_x86_64", darwin_arm64 = "macosx_11_0_arm64"}

[tool.pdm.scripts]
bump = "bump2version"

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
]
